<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_OKtopics"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/btn_ok_standart" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:layout_marginTop="148dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="91dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/themeText_TV"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/themeText_TV"
                            android:textAlignment="center"
                            android:textColor="#575F6B"
                            android:textSize="17dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/themenString1_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="64dp"
                            android:text="@string/themeSrtring1"
                            android:textSize="34sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/themeString11_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="8sp"
                            android:singleLine="false"
                            android:text="@string/themeSrtring11"
                            android:textAlignment="textStart"
                            android:textSize="24sp"
                            app:layout_constraintStart_toStartOf="@+id/themenString1_TV"
                            app:layout_constraintTop_toBottomOf="@+id/themenString1_TV" />

                        <TextView
                            android:id="@+id/themenString2_TV2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="@string/themeSrtring2"
                            android:textSize="34sp"
                            app:layout_constraintStart_toStartOf="@+id/themenString1_TV"
                            app:layout_constraintTop_toBottomOf="@+id/themeString11_TV" />

                        <TextView
                            android:id="@+id/themeString22_TV2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="8sp"
                            android:singleLine="false"
                            android:text="@string/themeSrtring22"
                            android:textAlignment="textStart"
                            android:textSize="24sp"
                            app:layout_constraintStart_toStartOf="@+id/themenString1_TV"
                            app:layout_constraintTop_toBottomOf="@+id/themenString2_TV2" />

                        <TextView
                            android:id="@+id/themenString3_TV3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="@string/themeSrtring3"
                            android:textSize="34sp"
                            app:layout_constraintStart_toStartOf="@+id/themenString1_TV"
                            app:layout_constraintTop_toBottomOf="@+id/themeString22_TV2" />

                        <TextView
                            android:id="@+id/themenString33_TV3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="8sp"
                            android:singleLine="false"
                            android:text="@string/themeSrtring33"
                            android:textAlignment="textStart"
                            android:textSize="24sp"
                            app:layout_constraintStart_toStartOf="@+id/themenString1_TV"
                            app:layout_constraintTop_toBottomOf="@+id/themenString3_TV3" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>